--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,11 @@
+RewriteEngine on
+#Domaine 1
+RewriteCond %{HTTP_HOST} ^localhost$/yesorlandofl/
+RewriteRule ^(.*)$ /$1 [L]
+
 Options +FollowSymlinks
 Options -Indexes
-RewriteEngine on
+# RewriteEngine on
 
 DirectoryIndex page_index.php
 
