--- a/.htaccess
+++ b/.htaccess
@@ -17,7 +17,6 @@ RewriteRule ^search$  page_search.php [L]
 
 RewriteRule ^logout  page_login.php?EX=logout [L]
 
-RewriteRule ^login  page_login.php [L]
 
 RewriteRule ^vision  page_vision.php [L]
 RewriteRule ^test  page_test.php [L]
@@ -28,6 +27,7 @@ RewriteRule ^sell-lease  page_sell-lease.php [L]
 
 RewriteRule ^contact  page_contact.php [L]
 RewriteRule ^home  page_index.php [L]
+RewriteRule ^login  page_index.php [L]
 
 RewriteRule ^dashboard$  page_dashboard.php [L]
 RewriteRule ^dashboard/recently_viewed$  page_dashboard.php?EX=showAllRecentlyViewed [L]
@@ -35,9 +35,11 @@ RewriteRule ^dashboard/favorites$  page_dashboard.php?EX=showAllFavoritesPropert
 RewriteRule ^dashboard/test$  page_dashboard.php?EX=test [L]
 RewriteRule ^dashboard/admin/visits$  page_dashboard.php?EX=adminVisits [L]
 RewriteRule ^dashboard/admin/listMember$  page_dashboard.php?EX=showListMember [L]
+RewriteRule ^dashboard/admin/listMember/(.*)$  page_dashboard.php?EX=showListMember&page=$1 [L]
 RewriteRule ^dashboard/admin/visits/([0-9]{1,})$  page_dashboard.php?EX=adminVisits&page=$1 [L]
 RewriteRule ^dashboard/profile/([0-9]{1,})$  page_dashboard.php?EX=showProfile&member=$1 [L]
 RewriteRule ^dashboard/profile$  page_dashboard.php?EX=showProfile [L]
 RewriteRule ^dashboard/profile/edit$  page_dashboard.php?EX=editProfile [L]
 RewriteRule ^dashboard/mail$  page_dashboard.php?EX=showConversation [L]
+RewriteRule ^dashboard/mail_(.*)$  page_dashboard.php?EX=showConversation&page=$1 [L]
 RewriteRule ^dashboard/mail/(.*)$  page_dashboard.php?EX=showMessageConversation&id_conversation=$1\#last_msg [L]
